<?xml version="1.0"?>
<package format="2">
  <name>blackfly</name>
  <version>1.0.0</version>
  <description>The blackfly driver</description>

  <maintainer email="fmascarich@nevada.unr.edu">Frank Mascarich</maintainer>
  <maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>

<export>
  <nodelet plugin="${prefix}/nodelet_plugins.xml" />
</export>

</package>
