<?xml version="1.0"?>
<package format="2">
  <name>spinnaker_driver</name>
  <version>1.0.0</version>
  <description>A driver for cameras using the Spinnaker SDK from Flir</description>

  <maintainer email="fmascarich@nevada.unr.edu">Frank Mascarich</maintainer>
  <maintainer email="nikhil.v.khedekar@ntnu.no">Nikhil Khedekar</maintainer>
  <maintainer email="paolo.de.petris@ntnu.no">Paolo De Petris</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>

<export>
  <nodelet plugin="${prefix}/nodelet_plugins.xml" />
</export>

</package>
